--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <!-- span text 'PHARRELLWILLIAMS.COM' -->
 <span>PHARRELLWILLIAMS.COM</span>
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
-        <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png">
+        <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png" alt="sth">
 
 
         <!-- span text 'COLUMBIARECORDS.COM' -->
@@ -44,7 +44,7 @@
         <br>
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
-        <img src="https://s3.amazonaws.com/learn-verified/sony-logo.png">
+        <img src="https://s3.amazonaws.com/learn-verified/sony-logo.png" alt="nth">
 
       </div>
     </div>
